@@ -12,6 +12,6 @@
          	] -%>
          <% end %>
       <% else %>
-         <p><i>No new postings were found to match the search criteria.</i></p>
+         <p><i>No new postings were found, which matched the search criteria.</i></p>
       <% end %>
 <% end %>
