@@ -12,7 +12,7 @@ CRAIGSLIST REPORTER
 			post.url
       ] -%>
       <% else %>
-      No new postings were found to match the search criteria.
+      No new postings were found, which matched the search criteria.
       <% end -%>
    <% end %>
 <% end -%>
